last minute changes

--- a/doc/latex2/introduction.tex
+++ b/doc/latex2/introduction.tex
@@ -22,7 +22,7 @@ Each individual solver has tested both as a standalone unit, and as a part of th
 \section{Outline}
 \noindent The thesis in your hands has the following structure: \\
 
-\noindent \emph{Chapter \ref{chapter:theory}} contains a detailed review of the coupling between the two models, as well as a look at band diagonal linear systems. \\
+\noindent \emph{Chapter \ref{chapter:theory}} contains a detailed review of the coupling between a diffusion equation and a lower scale Random Walk model, as well as a look at band diagonal linear systems. \\
 
 \noindent \emph{Chapter \ref{chapter:analysis}} defines the error estimate and shows a thorough analysis of all parts of the developed software in order to verify that it functions properly. \\
 
