added an additional reference

--- a/doc/latex2/references.bib
+++ b/doc/latex2/references.bib
@@ -171,3 +171,7 @@
 	year = "2014"
 }
 
+@article{varah1972solution,
+	title = "{On the solution of block-tridiagonal systems arising from certain finite-difference equations}"
+}
+
