improved some references

--- a/doc/latex2/references.bib
+++ b/doc/latex2/references.bib
@@ -36,7 +36,12 @@
 
 @article{craske2005spines,
 	author = "Craske, Madeleine L and Fivaz, Marc and Batada, Nizar N and Meyer, Tobias",
-	title = "{Spines and neurite branches function as geometric attractors that enhance protein kinase C action}"
+	journal = "The Journal of cell biology",
+	number = "170",
+	pages = "1147-1158",
+	title = "{Spines and neurite branches function as geometric attractors that enhance protein kinase C action}",
+	volume = "7",
+	year = "2005"
 }
 
 @article{hjorth2011computational,
@@ -172,6 +177,12 @@
 }
 
 @article{varah1972solution,
-	title = "{On the solution of block-tridiagonal systems arising from certain finite-difference equations}"
+	author = "Varah, James M",
+	journal = "Mathematics of Computation",
+	number = "120",
+	pages = "859-868",
+	title = "{On the solution of block-tridiagonal systems arising from certain finite-difference equations}",
+	volume = "26",
+	year = "1972"
 }
 
